# sanstro

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  NATCHATHIRAM_DASHA_WRITING_GUIDE.md  README.md  THIRUKANITHAM_98_PLAN.md  VINAADI_QUALITY_FIXES.md  agents.md  alembic.ini  backup_before_deleted_at_20260531_2105.sql  dev.ps1  docker-compose.app.yml  docker-compose.yml  pyproject.toml  requirements.txt  restore-dev-db.ps1  run-tests-safe.ps1  test_run_exitcode.txt  test_run_output.txt
.claude/: settings.local.json
app/: __init__.py  main.py  middleware.py
backups/: vinaadi_dev_20260601_085138.sql  vinaadi_dev_20260601_085331.sql  vinaadi_dev_20260601_085635.sql  vinaadi_dev_20260601_090211.sql  vinaadi_dev_20260601_090723.sql
docker/: entrypoint.sh
docs/: AGENT_INSTRUCTIONS.md  ASTROLOGY_DEPTH_PLAN.md  AUDIT_AND_QA.md  AUDIT_FINDINGS_2026_06_01.md  CURRENT_LOCATION_IMPLEMENTATION_HANDOFF_2026_06_01.md  FAMILY_CHART_EXPLANATION_PLAN_v1.md  FRONTEND.md  FRONTEND_AND_ASTROLOGY_PLAN.md  GROWTH_FEATURES.md  HOMEPAGE_CONTENT_BLUEPRINT_2026_06_02.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_B_AND_C.md  IMPLEMENTATION_PLAYBOOK_ISSUES_2026_05_31.md  INDEX.md  ISSUE_ANALYSIS_PLAN_2026_05_29.md  ISSUE_SWEEP_EXECUTION_PLAYBOOK_2026_05_31.md  Jothidam_AI_Formula_Engine_Specification_v1_Thirukanitham_2026.md  Jothidam_AI_MVP_Sprint_Execution_Plan_v1_Thirukanitham_2026.md  Jothidam_AI_OpenAPI_v1_Thirukanitham_2026.yaml  Jothidam_AI_PostgreSQL_Schema_v1_Thirukanitham_2026.sql  Jothidam_AI_Product_Specification_v7_FULL_Master_Build_Thirukanitham_2026.md  Jothidam_AI_QA_Golden_Test_Cases_v1_Thirukanitham_2026.md  Jothidam_AI_Technical_API_Database_Spec_v1_Thirukanitham_2026.md  MARKETING_EXECUTION_TASKS_2026_06_02.md  MARKETING_PLAN.md  MARKETING_SEO_IMPLEMENTATION_ROADMAP_2026_06_02.md  MARKETING_SITE_IA_PLAN_2026_06_02.md  MASTER_IMPLEMENTATION_PLAN.md  PUBLIC_SITE_QA_CHECKLIST.md  SEO_GROWTH_STRATEGY_2026_06_02.md  SEVVAIRAGU.MD  THIRUKANITHAM_AUDIT_ISSUES.md  UIUX_REVAMP_PLAN.md  VINAADI_ENHANCEMENT_ROADMAP_v1.md  VINAADI_RULES.md  Vinaadi_AI_Enhancement_and_Bug_Fix_Instructions_v1.md  Vinaadi_Enhancement_Peyarchi_Notifications_v1.md  marriage-match.jsx
jothidam_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
scripts/: .gitkeep
tests/: conftest.py  test_admin_api.py  test_ambient_alerts_api.py  test_annual_wrapped_api.py  test_arch03_bilingual_audit.py  test_ask_vinaadi.py  test_astrology_shared_rules.py  test_auth.py  test_auth_api.py  test_bhava_chalit.py  test_birth_profiles_api.py  test_calculations.py  test_career_service.py  test_chart_strength.py  test_charts_api.py  test_confidence_layer.py  test_content_api.py  test_context_api.py  test_context_service.py  test_current_location_behavior.py  test_d9_chart.py  test_daily_guidance_api.py  test_daily_push_cron.py  test_dasha.py  test_dasha_api.py  test_dasha_house_mapping.py  test_database_models.py  test_decisions_api.py  test_divisional_charts.py  test_double_transit.py  test_emotional_weather.py  test_ephemeris.py  test_event_windows.py  test_event_windows_extended.py  test_family_vaults_api.py  (+44 more)
(+578 files in other folders)
