[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jothidam-ai"
version = "0.1.0"
description = "Vinaadi AI MVP 1 backend foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "pyswisseph>=2.10.3.2; python_version < '3.14'",
  "swisseph-ffi>=1.0.0; python_version >= '3.14'",
  "python-jose[cryptography]>=3.3,<4.0",
  "cryptography>=42.0",
  "bcrypt>=4.1",
  "passlib[bcrypt]>=1.7,<2.0",
  "psycopg2-binary>=2.9,<3.0",
  "apscheduler>=3.10,<4.0",
  "reportlab>=4.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
    "no_db: pure unit tests that do not need a database connection",
]
